# mdmcp

./: AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  INSTALLATION_AND_USAGE.md  LICENSE  README.md  doc_seg.txt  doc_slice.txt  doc_slice2.txt  mdmcp_design_spec_v_1.md  mdmcp_enhanced_error_handling_design.md  mdmcp_error_handling_analysis.md  test_new_methods.py  test_policy.yaml  test_regex.rs
.claude/: settings.local.json
.claude/agents/: mcp-research-agent.md
.github/workflows/: ci.yml  release.yml
crates/mdmcp_common/: Cargo.toml
crates/mdmcp_common/src/: error_context.rs  lib.rs
crates/mdmcp_policy/: Cargo.toml
crates/mdmcp_policy/src/: lib.rs
docs/: 2025.09.12 - MDMCPCFG review updated.md  2025.09.12 - MDMCPCFG review.md  2025.09.12 - MDMCPSRVR review updated.md  2025.09.12 - MDMCPSRVR review.md  INSTALLATION_AND_USAGE.md  mcp-server-development-guide.md
docs/design/: 2025.09.11_improved_uts_plan.md  mdmcp_design_spec_v_1.md  mdmcp_enhanced_error_handling_design_v2.md
examples/: policy.example.yaml
mdaicli/: Cargo.toml
mdaicli/docs/: interface-spec.md
mdaicli/docs/examples/: messages.json  tools.json
mdaicli/src/: audit.rs  config.rs  credentials.rs  errors.rs  helptext.rs  io.rs  lib.rs  main.rs  model.rs  opts.rs  pricing.rs  rate_limit.rs
mdaicli/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
mdaicli/tests/: providers_ollama.rs  providers_openai.rs  providers_streaming.rs
mdmcpcfg/: Cargo.toml  build.rs
mdmcpcfg/src/: io.rs  main.rs
mdmcpcfg/src/commands/: docs.rs  doctor.rs  doctor_extra.rs  install.rs  mod.rs  policy.rs
mdmcpsrvr/: Cargo.toml  build.rs  test_policy.yaml
mdmcpsrvr/src/: audit.rs  cmd_catalog.rs  fs_safety.rs  main.rs  policy.rs  rpc.rs  sandbox.rs  server.rs
mdmcpsrvr/tests/: e2e_file_tools.rs  e2e_reload_policy.rs  e2e_resources_info.rs  e2e_stdio.rs  test_policy.yaml
plugins/: README.md
plugins/mdaicli/: Cargo.toml
plugins/mdaicli/docs/: HELP.md  anthropic-api.md  interface-spec-v2.md  openai-api.md  openrouter-api.md
plugins/mdaicli/docs/examples/: config.toml  messages.yaml
plugins/mdaicli/src/: cache.rs  credentials.rs  helptext.rs  io.rs  opts.rs
plugins/mdaicli/src/providers/: mod.rs  openai.rs  openrouter.rs
plugins/mdaicli/tests/: config_and_creds.rs  providers_anthropic_mock.rs  providers_more_mock.rs  providers_ollama.rs  providers_openai_mock.rs
plugins/mdconfcli/: AGENTS.md  Cargo.toml  README.md
plugins/mdconfcli/src/: auth.rs  main.rs
plugins/mdjiracli/: AGENTS.md  Cargo.toml  README.md
plugins/mdjiracli/src/: help_examples.txt  main.rs
plugins/mdjiracli/tests/: .cli_help.rs.pending-snap  cli_help.rs
plugins/mdmailcli/: 2025.09.12 - MSFT Graph API extensions.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
plugins/mdmailcli/src/: main.rs
plugins/mdmailcli/tests/: integration_test.rs
plugins/mdslackcli/src/: main.rs
release/: README.md
tests/: test_new_methods.py  test_policy.yaml  test_version.bat
tools/: make_icons.ps1  make_icons.sh
wrk_docs/: 2025.12.11 - HLD - Remove Root and WSL UNC Support.md  2026.01.01 - CC - Initial Coverage Report.md  2026.01.01 - Plan - Coverage Improvement.md  2026.01.01 - Status - Coverage Improvement Final.md  2026.01.01 - Status - Coverage Improvement Stage 3.md  2026.01.01 - Status - Coverage Improvement.md  2026.01.01 - Status - Session End.md
wrk_journals/: 2025.12.11 - JRN - Remove Root and WSL UNC Implementation.md
