[workspace]
members = [
  "mdmcpsrvr",
  "mdmcpcfg",
  "crates/mdmcp_policy",
  "crates/mdmcp_common",
  "plugins/mdaicli",
  "plugins/mdconfcli",
  "plugins/mdjiracli",
  "plugins/mdmailcli",
  "plugins/mdslackcli",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["mdmcp developers"]
license = "Apache-2.0"
version = "0.5.3"
