[package]
name = "mdaicli"
version = "0.1.0"
edition = "2021"
description = "CLI for unified access to AI providers with MCP integration"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock"] }
thiserror = "1"
once_cell = "1"
base64 = "0.22"
anyhow = "1"
directories = "5"
rpassword = "7"
rand = "0.8"
argon2 = "0.5"
aes-gcm = { version = "0.10", features = ["aes"] }
aead = "0.5"
hex = "0.4"
atty = "0.2"
keyring = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls", "multipart"] }

[dev-dependencies]
tempfile = "3"
mockito = "1"
serial_test = "3"
