[package]
name = "mdmcpsrvr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "mdmcpsrvr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "0.8"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
bytes = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
base64 = "0.22"
cfg-if = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
cap-std = "3.0"
dunce = "1.0"

# Workspace dependencies
mdmcp_policy = { path = "../crates/mdmcp_policy" }
mdmcp_common = { path = "../crates/mdmcp_common" }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["resource", "signal", "process"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
