[package]
name = "mdmcp_policy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "0.8"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
dunce = "1.0"

[dev-dependencies]
tempfile = "3.0"
