[package]
name = "mdmailcli"
version = "0.6.2"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
keyring = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
httpmock = "0.7"
